--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Daily Notes
 email: louispotok+nb@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
         Just a place to put things, every day.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/notebook" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: louispotok
 
