--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/notebook" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: louispotok
+github_username: louispotok
 
 # Build settings
 theme: minima
